       set_compute_duration(t)      -> set_flops_amount(t)
       get_remaining_computation(t) -> set_flops_amount(t)
     - set_data_size(t) -> set_bytes_amount(t)
       get_data_size(t) -> get_bytes_amount(t)
   - Massive cleanups in the functions related to the energy
     - MSG_host_get_pstate_number() -> MSG_host_get_nb_pstates()
   - New: MSG_host_get_pstate() 
 jMSG:
 * Interface improvement:
   - Rename Host.isAvail() to Host.isOn()
   - Rename Process.currentProcess() to Process.getCurrentProcess()
   - Rename Task.setDataSize() to Task.setBytesAmount()
   - Merge Task.getRemainingDuration() and Task.getComputeDuration() into Task.getFlopsAmount()
 * Bug fixes:
   - #18874: Actually allows the GC to reclaim tasks
   
 SIMIX:
 * New functions
   - SIMIX_process_throw: raises an exception in a remote process
 * Refactoring: Separate submodules
   - libsmx: the public interface, as libc in a real system
   - popping: the strange dance that converts a user request into a kernel handling
   - smx_context_*: the virtualization mechanisms that embeed the user code
   - smx_*: the handling of each simcalls
 * Interface cleanup:
   - simcall_host_set_power_peak_at -> simcall_host_set_pstate
 * Rename smx_action_t into smx_synchro_t, making explicit that these
   things are used to synchronize processes with their environment.    
   For example, a communication is a sort of synchronization involving
   the communicating processes (that may block until the exchange) and
   the platform. The same can be said from computations, etc.
 * Bug fixes:
   - #18888: segfault when a process ends before its kill_time
   
 SMPI: 
 * New functions
   - Onesided early support for : MPI_Win_(create, free, fence, get_name, set_name, get_group), MPI_Get, MPI_Put, MPI_Accumulate, MPI_Alloc_mem, MPI_Free_mem. 
   - MPI_Keyval*, MPI_Attr* functions, as well as MPI_Comm_attr*, MPI_Type_attr* variants (C only, no Fortran support yet)
   - MPI_Type_set_name, MPI_Type_get_name