@@ -1,0 +1,25 @@
+#! ./tesh
+
+p Testing the mechanism for computing host energy consumption
+
+! output sort
+$ $SG_TEST_EXENV energy/onoff/onoff$EXEEXT ${srcdir:=.}/energy/onoff/platform_onoff.xml ${srcdir:=.}/energy/onoff/deployment_onoff.xml "--log=root.fmt:[%10.6r]%e(%i:%P@%h)%e%m%n"
+> [  0.000000] (1:onoff_test@MyHost2) Energetic profile: 95.0:200.0,93.0:170.0,90.0:150.0,       120:120,110:110
+> [  0.000000] (1:onoff_test@MyHost2) Initial peak speed=1E+08 flop/s; Energy dissipated =0E+00 J
+> [  0.000000] (1:onoff_test@MyHost2) Sleep for 10 seconds
+> [ 10.000000] (1:onoff_test@MyHost2) Done sleeping. Current peak speed=1E+08; Energy dissipated=950.00 J
+> [ 10.000000] (1:onoff_test@MyHost2) Switch to virtual pstate 4, that encodes the shutting down state in the XML file of that example
+> [ 10.000000] (1:onoff_test@MyHost2) Simulate the shutdown by executing one flop on that remote host (using a parallel task)
+> [ 16.997901] (1:onoff_test@MyHost2) Switch back to previously selected pstate 0
+> [ 16.997901] (1:onoff_test@MyHost2) Actually shutdown the host
+> [ 16.997901] (1:onoff_test@MyHost2) Host1 is now OFF. Current peak speed=1E+08 flop/s; Energy dissipated=1720 J
+> [ 16.997901] (1:onoff_test@MyHost2) Sleep for 10 seconds
+> [ 26.997901] (1:onoff_test@MyHost2) Done sleeping. Current peak speed=1E+08; Energy dissipated=1819.77 J
+> [ 26.997901] (1:onoff_test@MyHost2) Switch to virtual pstate 3, that encodes the shutting down state in the XML file of that example
+> [ 26.997901] (1:onoff_test@MyHost2) Actually start the host
+> [ 26.997901] (1:onoff_test@MyHost2) Simulate the boot up by executing one flop on that host
+> [176.997893] (0:@) Total simulation time: 177.00
+> [176.997893] (0:@) Total energy of host MyHost1: 19819.768169 Joules
+> [176.997893] (0:@) Total energy of host MyHost2: 17699.789313 Joules
+> [176.997893] (1:onoff_test@MyHost2) Switch back to previously selected pstate 0
+> [176.997893] (1:onoff_test@MyHost2) Host1 is now ON again. Current peak speed=1E+08 flop/s; Energy dissipated=19820 J
