@@ -11,7 +11,9 @@ SimGrid (3.12) NOT RELEASED; urgency=low
        get_data_size(t) -> get_bytes_amount(t)
    - Massive cleanups in the functions related to the energy
      - MSG_host_get_pstate_number() -> MSG_host_get_nb_pstates()
-   - New: MSG_host_get_pstate() 
+   - New: MSG_host_get_pstate()
+ * New example:
+   - msg/energy/onoff: switching hosts on and off
  jMSG:
  * Interface improvement:
    - Rename Host.isAvail() to Host.isOn()
